Subscribe rss styles.

--- a/_layouts/rss-subscribe.html
+++ b/_layouts/rss-subscribe.html
@@ -1,4 +1,6 @@
 
-<p>Subscribe to our RSS feed to get the latest content in your reader.</p>
+<p class="sans">
+    Subscribe to our RSS feed to get the latest content in your reader.
+</p>
 
 {{ post_macros.rss_button('newsroom') }}
