--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -25,6 +25,25 @@
 
 
 /* topdoc
+  name: Sans
+  family: cfgov-misc
+  patterns:
+    - name: San serif text
+      markup: |
+        <p class="sans">I am using a  san serif font.</p>
+      codenotes:
+        - .sans
+  tags:
+    - cfgov-misc
+*/
+
+.sans {
+    color: @black;
+    .webfont-regular();
+}
+
+
+/* topdoc
   name: Form pattern showcase
   family: cfgov-misc
   patterns:
