--- a/static/css/main.less
+++ b/static/css/main.less
@@ -104,3 +104,4 @@ img {
 @import (less) "post.less";
 @import (less) "summary.less";
 @import (less) "blog-docs.less";
+@import (less) "press-resources.less";
