--- a/static/css/demo.less
+++ b/static/css/demo.less
@@ -51,7 +51,6 @@
     padding:
         unit(8px / @font-size, em)
         unit(12px / @font-size, em);
-    margin: 3em 0;
     color: @gray;
     .webfont-regular();
     font-size: unit( @font-size / @base-font-size-px, em );
@@ -82,5 +81,15 @@
     .grid_column(12);
     .u-respond-to-min(480px, {
         .grid_column(6);
+    });
+}
+
+.header .demo-placeholder,
+.footer .demo-placeholder {
+    // Temporary styling to bring in line with main columns.
+    margin: (@grid_gutter-width / 2);
+
+    .u-respond-to-range(600px, 800px, {
+        margin: @grid_gutter-width;
     });
 }
