--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7639,7 +7639,6 @@ a.category-slug.active {
 */
 
 .sans {
-  color: #101820;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -7667,6 +7666,31 @@ a.category-slug.active {
 .lt-ie9 .sans strong,
 .lt-ie9 .sans b {
   font-weight: normal !important;
+}
+
+/* topdoc
+  name: Link modifiers
+  family: cfgov-misc
+  patterns:
+    - name: Block link on small screens
+      markup: |
+        <a class="link__block-on-small">
+            On small screens I am a block, on larger screens I am a normal link.
+        </a>
+      codenotes:
+        - .link__block-on-small
+  tags:
+    - cfgov-misc
+*/
+
+.link__block-on-small {
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif !important;
+  font-style: normal !important;
+  font-weight: 500 !important;
+}
+
+.lt-ie9 .link__block-on-small {
+  font-weight: normal !important !important;
 }
 
 /* topdoc
@@ -10394,6 +10418,23 @@ a.focus .summary_header {
                 </div>
             </a>
         </article>
+    - name: Press Information
+      markup: |
+        <div class="press-information">
+            <h1 class="header-slug">
+                <span class="header-slug_inner">
+                    Press information
+                </span>
+            </h1>
+            <p class="sans">
+                If you want to repbulish the article or have questions about the content,
+                please contact the press office.
+            </p>
+            <p>
+                <a class="sans"
+                   href="/newsroom/press-resources/">Go to press resources page</a>
+            </p>
+        </div>
   tags:
     - cfgov-blog-docs
 */
@@ -10408,6 +10449,37 @@ a.focus .summary_header {
 
 .post-pagination {
   margin: 3.375em 0 1.75em;
+}
+
+.press-information {
+  margin-top: 3.75em;
+}
+
+.press-information {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 58.33333333%;
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.ie .press-information {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .press-information {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 /* topdoc
