--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -58,13 +58,13 @@
 */
 
 .link__block-on-small {
-    .webfont-medium() !important;
+    .webfont-medium();
 
     .u-respond-to-max(599px, {
-        display: block !important;
-        padding: 0.5em 0 !important;
-        border-top: 1px dotted @pacific !important;
-        border-bottom: 1px dotted @pacific !important;
+        display: block;
+        padding: 0.5em 0;
+        border-top: 1px dotted @pacific;
+        border-bottom: 1px dotted @pacific;
     });
 }
 
